<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">iHerbarium</string>
	<string name="add">Add</string>	
	<string name="history">History</string>
	<string name="settings">Settings</string>
	<string name="web">Web</string>
	
	<string name="account_preferences">Account Preferences</string>
	<string name="account_settings">Account Settings</string>
	<string name="select_account">Select an account</string>
	<string name="account_not_set">Not set</string>
	<string name="connection_status">Connection Status</string>	
	<string name="connected">Connected</string>
	<string name="not_connected">Not connected</string>
	<string name="enter_password">Enter password</string>
	<string name="jpeg_compression">Level of picture compression</string>
	<string name="jpeg_compression_level_20pct">Very High compression</string>
	<string name="jpeg_compression_level_40pct">High compression</string>
	<string name="jpeg_compression_level_60pct">Good quality</string>
	<string name="jpeg_compression_level_80pct">High quality</string>
	<string name="jpeg_compression_level_90pct">Very High quality (avoid if not necessary)</string>
	<string name="synchronization_preferences">Synchronization Preferences</string>
	<string name="auto_synchronization">Auto Synchronization</string>
	<string name="synchronization_help">Synchronization will be auto after observation registering</string>
	<string name="webservice_error">Web Service Error</string>
	<string name="no_location_title">No Location available</string>
	<string name="no_location_message">No Location available. Would you continue?</string>
	<string name="quit_title">Quit</string>
	<string name="quit_message">If you quit, the current observation will be lost!</string>
	
	<string name="take_picture">Take a picture</string>
	<string name="choose_picture">Choose a picture</string>
	<string name="next">Next</string>
	<string name="back">Back</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="date_format">yyyy-MM-dd</string>
	<string name="start_activity">Start activity</string>
	<string name="start_activity_text">You can collect photos and videos of a plant you are seeing, and keep track of its details. The pictures are then send to the website, and you will receive an email from the site with the name of the plant or a comment</string>
	
	<string name="gps_enabled">GPS Enabled</string>
	<string name="gps_disabled">GPS Disabled</string>
	<string name="synchronize">Synchronize</string>
	<string name="delete">Delete</string>
	<string name="undefined">Undefined</string>
	
	<string name="select_label">Choose a tag</string>
	<string name="whole_plant">Whole plant</string>
	<string name="flower">Flower</string>
	<string name="leaf">Leaf</string>
	<string name="stem">Stem</string>
	
	<string name="tag_whole_plant">Whole plant</string>
	<string name="tag_flower">Flower</string>
	<string name="tag_leaf">Leaf</string>
	<string name="tag_stem">Stem</string>
	<string name="tag_fruit">Fruit</string>
	
	<string name="num_obs">Num Observation : </string>
	<string name="date_obs">Date : </string>
	<string name="size_obs">Size : </string>
	<string name="commentary_obs">Commentary : </string>
	<string name="domain_obs">Domain : </string>
	<string name="common_name_obs">Common name : </string>
	<string name="scientific_name_obs">Scientific name : </string>
	<string name="password">Password : </string>
</resources>