<?xml version="1.0" encoding="utf-8"?>
<com.iherbarium.views.SettingsView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:padding="5dp"
        android:background="#778899">
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/account_preferences"
	        android:textColor="#FFF"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    </FrameLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <LinearLayout
	        android:id="@+id/linearAccount"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_settings"
                android:textColor="#000"
                android:textAppearance="?android:attr/textAppearanceLarge" />

           <TextView
		        android:id="@+id/txtAccount"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/account_not_set"
		        android:textColor="#00bfff"
		        android:layout_marginTop="5dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
   		</LinearLayout>
   		
        <FrameLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0.5dp"
	        android:background="#CCC"/>
           
        <LinearLayout
            android:id="@+id/linearConnection"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_status"
	        	android:textColor="#000"
                android:textAppearance="?android:attr/textAppearanceLarge" />

           <TextView
		        android:id="@+id/txtConnectionStatus"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="Small Text"
		        android:textColor="#00bfff"
		        android:layout_marginTop="5dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
   		</LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:padding="5dp"
        android:background="#778899">
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/synchronization_preferences"
	        android:textColor="#FFF"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    </FrameLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <LinearLayout
	        android:id="@+id/linearSync"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:padding="10dp">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/auto_synchronization"
	                android:textColor="#000"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:layout_gravity="left|center" />
	                        
	            <CheckBox
	                android:id="@+id/ckSync"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" 
	                android:layout_gravity="right"/>
            </FrameLayout>
   

           <TextView
		        android:id="@+id/txtAccount"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/synchronization_help"
		        android:textColor="#00bfff"
		        android:layout_marginTop="5dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
   		</LinearLayout>
   		
        <FrameLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0.5dp"
	        android:background="#CCC"/>
           
	</LinearLayout>
        
</com.iherbarium.views.SettingsView>