<?xml version="1.0" encoding="utf-8"?>
<com.iherbarium.views.MainView 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background='#FFF'>

	<FrameLayout
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000">
        
        <ImageView
        	android:layout_height="16dp"
        	android:layout_width="wrap_content"
        	android:background="@drawable/title_bar">
        </ImageView>
	</FrameLayout>

    <LinearLayout
        android:id="@+id/mainNavBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#344c29">
        
        <FrameLayout
	        android:id="@+id/mainNavBarAdd"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:background="#344c29">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_gravity="center" 
                android:textColor="#000"/>    
	    </FrameLayout>
	    
	    <FrameLayout
	        android:id="@+id/mainNavBarHistory"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent" 
	        android:layout_weight="1"
	        android:background="#344c29">

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/history"
                android:layout_gravity="center"
                android:textColor="#000"/>
	    </FrameLayout>
	    
		<FrameLayout
	        android:id="@+id/mainNavBarSettings"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:background="#344c29">

			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/settings"
                android:layout_gravity="center"
                android:textColor="#000"/>
	    </FrameLayout>
        
        <FrameLayout
	        android:id="@+id/mainNavBarWeb"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:background="#344c29">

			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/web"
                android:layout_gravity="center"
                android:textColor="#000"/>
	    </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/mainContent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </FrameLayout>

</com.iherbarium.views.MainView>