<?xml version="1.0" encoding="utf-8"?>
<com.iherbarium.views.PhotoGridView
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="#FFF">

	<GridView 
		android:id="@+id/photoGrid" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:numColumns="auto_fit"
	    android:verticalSpacing="10dp"
	    android:horizontalSpacing="10dp"
	    android:columnWidth="60dp"
	    android:stretchMode="columnWidth" />

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_obs" 
                android:textSize="12dp" 
                android:textColor="#000"/>

            <EditText
                android:id="@+id/editSizeObs"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_weight="1" >
                <requestFocus />
            </EditText>
	    </LinearLayout>
	    
            
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commentary_obs" 
                android:textSize="12dp"
                android:textColor="#000"/>
                

            <EditText android:id="@+id/editCommentaryObs"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_weight="1" >
                <requestFocus />
            </EditText>
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domain_obs" 
                android:textSize="12dp"
                android:textColor="#000"/>
            
            <EditText android:id="@+id/editDomainObs"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_weight="1" >
                <requestFocus />
            </EditText>
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_name_obs" 
                android:textSize="12dp"
                android:textColor="#000"/>
            
            <EditText android:id="@+id/editCommonNameObs"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_weight="1" >
                <requestFocus />
            </EditText>
	    </LinearLayout>
	    
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scientific_name_obs"
                android:textSize="12dp"
                android:textColor="#000"/>
            
            <EditText android:id="@+id/editScientificNameObs"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_weight="1" >
                <requestFocus />
            </EditText>
	    </LinearLayout>
    </LinearLayout>
</com.iherbarium.views.PhotoGridView>